[package]
name = "review-everything"
version = "0.1.0"
edition = "2024"
description = "Interactive TUI diff viewer powered by difftastic"
authors = ["pablosgraduation"]
license = "MIT OR Apache-2.0"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/pablosgraduation/review-everything"
homepage = "https://github.com/pablosgraduation/review-everything"
keywords = ["diff", "tui", "difftastic", "git", "code-review"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "re"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
